--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -11,6 +11,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* overflow: scroll; */
+  background-color: #f5f5f58e;
 }
 
 code {
