--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -3,7 +3,9 @@
   margin: 0;
   padding: 0;
 }
-
+html{
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,7 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* overflow: scroll; */
-  background-color: #f5f5f58e;
+  background-color: #fff;
 }
 
 code {
