--- a/todo/src/components/Loading/Loading.css
+++ b/todo/src/components/Loading/Loading.css
@@ -1,65 +1,37 @@
-@keyframes spin {
-	to {
-		transform: rotate(1turn);
-	}
-}
-
-
-.progress {
-      margin-top: 15rem;
+.lds-facebook {
+	margin-top: 15rem;
 	display: inline-block;
 	position: relative;
-	width: 5em;
-	height: 5em;
-	text-align: center;
-	font-size: 12px;
-	text-indent: 999em;
-	overflow: hidden;
-	animation: spin 1s infinite steps(8);
-}
-
-.small.progress {
-	font-size: 6px;
-}
-
-.large.progress {
-	font-size: 24px;
-}
-
-.progress:before,
-.progress:after,
-.progress>div:before,
-.progress>div:after {
-	content: '';
+	width: 80px;
+	height: 80px;
+    }
+    .lds-facebook div {
+	display: inline-block;
 	position: absolute;
-	top: 0;
-	left: 2.25em;
-	/* (container width - part width)/2  */
-	width: .5em;
-	height: 1.5em;
-	border-radius: .2em;
-	background: #eee;
-	box-shadow: 0 3.5em #eee;
-	/* container height - part height */
-	transform-origin: 50% 2.5em;
-	/* container height / 2 */
-}
-
-.progress:before {
-	background: #555;
-}
-
-.progress:after {
-	transform: rotate(-45deg);
-	background: #777;
-}
-
-.progress>div:before {
-	transform: rotate(-90deg);
-	background: #999;
-}
-
-.progress>div:after {
-	transform: rotate(-135deg);
-	background: #bbb;
-}
+	left: 8px;
+	width: 16px;
+	background: #e2f3f5;
+	animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+    }
+    .lds-facebook div:nth-child(1) {
+	left: 8px;
+	animation-delay: -0.24s;
+    }
+    .lds-facebook div:nth-child(2) {
+	left: 32px;
+	animation-delay: -0.12s;
+    }
+    .lds-facebook div:nth-child(3) {
+	left: 56px;
+	animation-delay: 0;
+    }
+    @keyframes lds-facebook {
+	0% {
+	  top: 8px;
+	  height: 64px;
+	}
+	50%, 100% {
+	  top: 24px;
+	  height: 32px;
+	}
+    }
