--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -6,6 +6,9 @@
 html{
   scroll-behavior: smooth;
 }
+a{
+  text-decoration: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
